modifications in pdf_to_image and sender scripts.
- moved
- adapted code to execution (user.dir, programming language, environment, console)